[package]
name = "screeps"
version = "0.0.0"
description = "my screeps colony"
authors = ["saud-alnasser"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "=0.3.69"
log = "=0.4.21"
fern = "=0.6.2"
# If you'd like to use a locally-cloned out version of the game API crate
# (for testing PRs, etc), you can use a local path (replacing the below line):
# e.g. screeps-game-api = { path = "../screeps-game-api" }
screeps-game-api = "=0.20.1"
wasm-bindgen = "=0.2.92"
web-sys = { version = "=0.3.69", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# Replace the following to enable wasm-opt optimization
# wasm-pack will try to install wasm-opt automatically, but it must be installed by hand on some
# operating systems.
# wasm-opt = false
# See wasm-opt for full available options; handy examples:
# -O4 - optimize aggressively for performance
# -Oz - optimize aggressively for code size
# -g - leave debug info in place, allowing for more descriptive stack traces on panic
# --disable-sign-ext - prevents opcodes that the screeps servers can't load (see 
# https://github.com/rustyscreeps/screeps-game-api/issues/391)
wasm-opt = ["-O3", "--disable-sign-ext"]

[features]
default = []

sim = ["screeps-game-api/sim"]
